[tool.poetry]
name = "quokko"
version = "0.1.0"
description = ""
authors = ["Pasqg <pasquale.giovenale@gmail.com>"]
readme = "README.md"
packages = [{ include = "parser"}, {include = "examples"}, {include = "tests" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
