[tool.poetry]
name = "laxma"
version = "0.1.0"
description = ""
authors = ["PP"]
readme = "README.md"
packages = [{ include = "parser"}, {include = "examples"}, {include = "tests" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3"
pytest-cov = "^5.0.0"
pydantic = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
